# doc-preprocess-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_ORDER_2026_04_01.md  Makefile  README.md  SPEC_UPDATE_2026_04_01.md  cleanup-retraining-overrides.json  docker-compose.override.yml  docker-compose.yml  eep-runpod-task-def.json  inspect_checkpoint.py  inspect_model_keys.py  pyproject.toml  test_iep1d_curl.py  test_iep1d_rectify.py  test_iep1d_rectify_minio.py  test_iep1d_size_validation.py  test_iep1d_timing.py  test_real_runtime_demo.py  test_remapping.py  upload_test_image.py  validate_google_cleanup.py
.github/workflows/: ci.yml  deploy.yml  scale-up.yml  (+5 more)
data preparation/: libraryai_data_preparation_spec_final.md
docs/: 01_PROJECT_OVERVIEW.md  02_ARCHITECTURE.md  03_AI_PIPELINE.md  04_API_CONTRACTS.md  05_DEPLOYMENT.md  06_CLOUD_INFRASTRUCTURE.md  07_TRADEOFFS_AND_DESIGN_DECISIONS.md  08_HUMAN_REVIEW_AND_RETRAINING.md  09_MLOPS_OBSERVABILITY.md  10_QA_TESTING_VALIDATION.md  11_LIMITATIONS_AND_FUTURE_WORK.md  GOOGLE  api_contract.md  human_corrected_retraining_plan.md  retraining_runtime_contract.md
docs_pre_implementation/: frontend_product_spec.md  full_updated_spec.md  implementation_checklist.md  implementation_roadmap.md  outcome_spec.md  training_data.md  ui-pre-implementation_html.md
frontend/: .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
golden_dataset/: manifest.json
k8s/: README.md  admin-bootstrap-job.yaml  background-workers.yaml  configmap.yaml  eep-worker.yaml  eep.yaml  frontend.yaml  iep1e.yaml  inference-services.yaml  ingress.yaml  namespace.yaml  secret.yaml
monitoring/: baselines.json  drift_detector.py  drift_observer.py
scripts/: create_admin.py  documentai_batch_process_large_tiff.py  google_layout_request_matrix.py  runpod_s3_state.py  seed_test_page.py  test_google_layout_real.py
shared/: __init__.py  health.py  logging_config.py  metrics.py  middleware.py  runpod_pods_state.py  state_machine.py
tests/: conftest.py  test_admin_infra_endpoints.py  test_dashboard_trailing_page_rates.py  test_dataset_builder.py  test_dataset_registry.py  test_golden_gate_merge.py  test_google_document_ai.py  test_google_layout_integration.py  test_iep0_contract.py  test_iep1d_scaler.py  test_iep1e_ocr_scorer.py  test_iep1e_service.py  test_iep2_e2e.py  test_iep2a_backends.py  test_live_train.py  test_model_info.py  test_newspaper_review_policy.py  test_p0_downsample_step.py  test_p1_jobs_create.py  test_p1_jobs_status.py  test_p1_migration.py  test_p1_models.py  test_p1_queue.py  test_p1_queue_schema.py  test_p1_redis_client.py  test_p1_schemas_eep.py  test_p1_schemas_geometry_normalization_iep1d_layout.py  test_p1_schemas_ucf_preprocessing.py  test_p1_state_machine.py  test_p1_storage.py  test_p1_uploads.py  test_p2_2_google_worker_config.py  test_p2_iep1a_contract.py  test_p2_iep1b_contract.py  test_p2_normalization.py  test_p2_quality.py  test_p2_split.py  test_p3_1_adjudication_schemas.py  test_p3_2_adjudication_gate.py  test_p3_2_layout_step.py  (+65 more)
training_iep1A/: 503n_trial1.ipynb
(+463 files in other folders)
