[project]
name = "libraryai"
version = "0.1.0"
description = "LibraryAI automated archival document processing pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "boto3>=1.34",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.7",
    "ruff>=0.4",
    "black>=24.4",
    "isort>=5.13",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "moto[s3]>=5.0",
    "boto3-stubs[s3]>=1.34",
]

# ── Ruff (linting only — black handles formatting) ────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

# ── Black (formatting) ────────────────────────────────────────────────────────

[tool.black]
target-version = ["py311"]
line-length = 100

# ── isort (import ordering) ───────────────────────────────────────────────────

[tool.isort]
profile = "black"
line_length = 100

# ── mypy (type checking) ──────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
