[project]
name = "libraryai"
version = "0.1.0"
description = "LibraryAI automated archival document processing pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "boto3>=1.34",
    "httpx>=0.27",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "prometheus-client>=0.24.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
    "bcrypt>=4.0",
    "mlflow>=2.12",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.7",
    "ruff>=0.4",
    "black>=24.4",
    "isort>=5.13",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "moto[s3]>=5.0",
    "boto3-stubs[s3]>=1.34",
    "fakeredis>=2.0",
]

# ── Ruff (linting only — black handles formatting) ────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

# ── Black (formatting) ────────────────────────────────────────────────────────

[tool.black]
target-version = ["py311"]
line-length = 100

# ── isort (import ordering) ───────────────────────────────────────────────────

[tool.isort]
profile = "black"
line_length = 100

# ── mypy (type checking) ──────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
